# eQuant-Py

./: .gitignore  README.md  pyproject.toml
dev/: test_indicator.py
eAlpha101-Py/: .Rhistory  README.md  pyproject.toml
eAlpha101-Py/ealpha101/: __init__.py  _base.py  alpha001_020.py  alpha021_040.py  alpha041_060.py  alpha061_080.py  alpha081_101.py  catalog.py  data.py  formulas.py  gen_formulas.py  primitives.py  utils.py
eAlpha101-Py/tests/test_alpha/: test_formulas.py  test_primitives.py
eBacktestCraft-Py/: README.md  pyproject.toml  run_viz.py
eBacktestCraft-Py/ebacktestcraft/: __init__.py  analytics.py  benchmark.py  config.py  engine.py  indicator.py  param_scan.py  plot.py  signals.py  weights.py
eBacktestCraft-Py/ebacktestcraft/enhance/: __init__.py  risk.py  signals.py  weights.py
eBacktestCraft-Py/tests/: conftest.py
eBacktestCraft-Py/tests/test_backtest/: test_backtest.py
eBacktestCraft-Py/tests/test_enhance/: test_enhance.py
eCandleSticks-Py/: README.md  pyproject.toml
eCandleSticks-Py/ecandlesticks/: __init__.py  _custom.py  _utils.py  patterns.py
eClassic-Py/: README.md  pyproject.toml
eClassic-Py/eclassic/: __init__.py  _panel.py  benchmark.py  beta.py  investment.py  momentum.py  profitability.py  ram.py  return_.py  rps.py  size.py  sma.py  value.py  volatility.py
eClassic-Py/tests/: conftest.py
eClassic-Py/tests/test_factors/: test_factors.py
eFactorCraft-Py/: README.md  pyproject.toml
eFactorCraft-Py/efactorcraft/: __init__.py  analysis.py  data.py  preprocess.py  rank.py
eFactorCraft-Py/efactorcraft/providers/: __init__.py  _codes.py  akshare.py  baostock.py  tushare.py
eFactorCraft-Py/efactorcraft/selection/: __init__.py  screen.py
eFactorCraft-Py/efactorcraft/synthesis/: __init__.py  composite.py
eFactorCraft-Py/efactorcraft/timing/: __init__.py  regime.py
eFactorCraft-Py/tests/: conftest.py
eFactorCraft-Py/tests/test_engineering/: test_preprocess.py
eFactorCraft-Py/tests/test_providers/: test_tushare.py
eFactorCraft-Py/tests/test_selection/: test_screen.py
eFactorCraft-Py/tests/test_synthesis/: test_composite.py
eFactorCraft-Py/tests/test_timing/: test_regime.py
eFinCharts-Py/: README.md  pyproject.toml
eFinCharts-Py/dev/: example_yahoo.py  smoke_test.py
eFinCharts-Py/efincharts/: __init__.py  chart.py  indicators.py  overlays.py  patterns.py  theme.py  utils.py
eTTR-Py/: LICENSE  README.md  pyproject.toml
eTTR-Py/ettr/: __init__.py  _panel.py  _rolling.py  misc.py  momentum.py  patterns.py  trend.py  volatility.py  volume.py
eTTR-Py/tests/: conftest.py
eTTR-Py/tests/test_indicators/: test_panel_indicators.py  test_rolling.py
edatatools/: README.md  pyproject.toml
edatatools/dev/: test_all.py  test_calendars.py
edatatools/edatatools/: __init__.py  calendars.py  returns.py  universe.py
equant/: README.md  __init__.py
equant/utils/: __init__.py  decorators.py  panel.py  types.py
webapp/: README.md  app.py  requirements.txt
webapp/lib/: bootstrap.py  config_store.py  data_cache.py  factor_catalog.py
webapp/pages/: 1_数据源配置.py  2_股票池与因子.py  3_信号与回测.py
