[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eCandleSticks"
version = "0.1.0"
description = "Japanese candlestick pattern detection for OHLC price series — pandas API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev  = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecandlesticks*"]
