[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eFactorCraft"
version = "0.1.0"
description = "Factor data acquisition and preprocessing for quantitative research — long-format pandas panel API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "requests>=2.28",
    "yfinance>=0.2.30",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["efactorcraft*"]
