[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eFinCharts"
version = "0.1.0"
description = "Financial charting for quantitative research — candlestick charts, technical indicators, and CSP pattern overlays, built on mplfinance"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "mplfinance>=0.12.9b0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["efincharts*"]
